Fix more validations to activate media queries for dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -61,15 +61,18 @@ html {
 
 }
 
+/* stylelint-disable media-feature-name-no-unknown */
+
 @media (prefers-reduced-motion) {
 
-  .gear {
+  img {
     animation: none;
   }
 
 }
 
 @media (prefers-color-scheme: dark) {
+
   body {
     background-color: #111;
   }
@@ -77,6 +80,7 @@ html {
 }
 
 @media (prefers-color-scheme: dark) {
+
   h1 {
     background-color: #ccc;
   }
@@ -84,18 +88,10 @@ html {
 }
 
 @media (prefers-color-scheme: dark) {
+
   .banner {
     background-color: #333;
   }
 
 }
-/* stylelint-disable media-feature-name-no-unknown */
-
-/**
- * =============
- * Write your “prefers” media queries here, between these two `stylelint` comments.
- * Unfortunately, Markbot, is a little too old to understand them. :(
- * =============
- */
-
 /* stylelint-enable */
